--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
   "dependencies": {
     "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
-    "vue": "^2.6.12",
-    "vue-agile": "^2.0.0",
     "inputmask": "^5.0.7",
-    "moment": "^2.29.4"  
+    "jquery": "^3.7.0",
+    "moment": "^2.29.4",
+    "slick-carousel": "^1.8.1",
+    "vue": "^2.6.12",
+    "vue-agile": "^2.0.0"
   }
 }
